assets/css/style.css
/* ... */
.detail-hotel_order .hotel-order_list .order-column_button .button-theme {
	font-size: .9em;
	padding: 7px 15px;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	white-space: nowrap;
	width: 185px;
}

.detail-hotel_order .hotel-order_list .order-column_title > a {
	font-size: 1em;
	font-weight: 600;
	color: var(--primary-color);
}

.detail-hotel_order .hotel-order_list .order-column_subtext {
	font-size: .95em;
	margin-top: 5px;
}

.form-group_quantity {
	position: relative;
}

.form-group_quantity .form-group_quantity_inner {
	display: block;
	width: 100%;
	padding: 0.375rem 0.75rem;
	font-size: 1rem;
	font-weight: 400;
	line-height: 1.5;
	color: #495057;
	background-clip: padding-box;
	border-radius: 0.25rem;
	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
	height: 40px;
	padding-top: 8px;
	border: 1px solid #ebebeb;
	background-color: #fff;
	cursor: pointer;
	position: relative;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.form-group_quantity .form-group_quantity_dropdown {
	position: absolute;
	border-radius: 4px;
	-webkit-box-shadow: 0 0 15px rgb(0 0 0 / 15%);
	box-shadow: 0 0 15px rgb(0 0 0 / 15%);
	background-color: var(--white);
	padding: 15px;
	width: 100%;
	display: flex;
	flex-direction: column;
	gap: 15px;
	top: calc(100% + 5px);
	left: 0;
	pointer-events: none;
	opacity: 0;
	visibility: hidden;
	transition: var(--transition-default);
}

.form-group_quantity.is-show .form-group_quantity_dropdown {
	pointer-events: auto;
	opacity: 1;
	visibility: visible;
	top: 100%;
}

.form-group_quantity .form-group_quantity_dropdown .quantity-dropdown_item {
	display: flex;
	align-items: center;
	justify-content: space-between;
	gap: 15px;
}

.form-group_quantity .form-group_quantity_dropdown .quantity-dropdown_item .quantity-dropdown_item--left {
	width: 50%;
}

.form-group_quantity .form-group_quantity_dropdown .quantity-dropdown_item .quantity-dropdown_item--left .quantity-dropdown_item--title {
	font-size: 1em;
	color: var(--gray-900);
	font-weight: 500;
	white-space: nowrap;
}

.form-group_quantity .form-group_quantity_dropdown .quantity-dropdown_item .quantity-dropdown_item--left .quantity-dropdown_item--desc {
	font-size: .9em;
	color: var(--gray-600);
	white-space: nowrap;
}

.form-group_quantity .form-group_quantity_dropdown .quantity-dropdown_item .quantity-dropdown_item--right {
	width: 50%;
	display: flex;
	align-items: center;
	justify-content: flex-end;
	gap: 10px;
}

.form-group_quantity .form-group_quantity_dropdown .quantity-dropdown_item .quantity-dropdown_item--right button {
	border-radius: 4px;
	display: flex;
	align-items: center;
	justify-content: center;
	border: 1px solid var(--gray-200);
	height: 26px;
	width: 26px;
	font-size: .8em;
	flex-shrink: 0;
}

.form-group_quantity .form-group_quantity_dropdown .quantity-dropdown_item .quantity-dropdown_item--right button:hover {
	background-color: var(--primary-color);
	color: var(--white);
}

.form-group_quantity .form-group_quantity_dropdown .quantity-dropdown_item .button-theme {
	color: var(--primary-color);
	border: 1px solid var(--primary-color);
	background-color: var(--white);
	width: 100%;
	border-radius: 4px;
}

.form-group_quantity .form-group_quantity_dropdown .quantity-dropdown_item .button-theme:hover {
	background-color: var(--primary-color);
	color: var(--white);
}

.popup-order .popup-detail_info {
	position: relative;
}

.popup-order .popup-detail_button {
	position: absolute;
	top: 0;
	right: 0;
	z-index: 2;
}

.popup-order .popup-detail_button > button {
	font-size: 1em;
	display: flex;
	align-items: center;
	justify-content: center;
	height: 30px;
	width: 30px;
	color: var(--gray-500);
	background: var(--gray-200);
	border-radius: 50%;
	border: 0;
}

.popup-order .popup-detail_button > button:hover {
	color: var(--gray-900);
}

.popup-order .popup-detail_info {
	display: flex;
	flex-direction: column;
	gap: 20px;
}

.popup-order .popup-detail_info .popup-detail_title {
	padding-right: 50px;
	font-size: 1.5em;
	color: var(--primary-color);
	font-weight: 600;
}

.popup-order .popup-detail_info .popup-detail_icons .popup-detail_icons--list {
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	gap: 15px;
	width: 100%;
	font-size: 1em;
}

.popup-order .popup-detail_info .popup-detail_icons .popup-detail_icons--list .popup-detail_icons--item {
	white-space: nowrap;
	display: flex;
	gap: 8px;
	align-items: center;
}

.popup-order .popup-detail_info .popup-detail_icons .popup-detail_icons--list .popup-detail_icons--item > i {
	color: var(--primary-color);
	width: 16px;
}

.popup-order .popup-detail_info .popup-detail_text {
	line-height: 1.6;
}

.popup-order .popup-detail_info .popup-detail_text ul {
	list-style: none;
	padding-left: 0;
	margin-bottom: 0;
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	gap: 8px;
	width: 100%;
	margin-top: 10px;
}

.popup-order .popup-detail_info .popup-detail_text ul > li {
	display: flex;
	gap: 8px;
	align-items: center;
	width: calc(50% - 15px);
	line-height: 1.2;
}

.popup-order .popup-detail_info .popup-detail_text ul > li > i {
	color: var(--primary-color);
	width: 16px;
}

.popup-order .popup-detail_images {
	display: flex;
	flex-direction: column;
	gap: 10px;
}

.popup-order .popup-detail_images .popup-detail_images--thumb .popup-detail_images--thumb---item > span {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	content: "";
	background: rgba(0, 0, 0, .3);
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	color: var(--white);
	font-size: 1.5em;
	opacity: 0;
	visibility: hidden;
	pointer-events: none;
	transition: var(--transition-default);
	cursor: pointer;
}
/* ... */

